# hyper-strategies

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
ai_docs/: README.md  nansen-api-address-perp-trades.md  nansen-api-hyperliquid-perp-positions.md  nansen-api-hyperliquid-token-perp-trades.md  nansen-api-perp-pnl-leaderboard.md  nansen-api-perp-screener.md  nansen-api-token-perp-positions.md  nansen-hyperliquid-api.md  nansen-hyperliquid-leaderboard-api.md  nansen-smart-money-perp-trades.md  typefully-api.md
backend/: Dockerfile  cache.py  config.py  dependencies.py  main.py  mock_data.py  run.py  schemas.py
bugs/: bugs.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
ideas/: brainstorm.md
log/: 2026-02-19-dashboard-architecture-walkthrough.md  2026-02-26-position-scoring-migration.md  deployment.md  log.md
models/: xgb_trader_v1.json  xgb_trader_v1.meta.json
scripts/: content-prompt.md  grid_search_filters.py  run-content-pipeline.sh  run_daily_flow.py  run_monitor.py  run_rebalance.py  run_strategies.py  stage1_smoke.py  stage2_single_trader.py  stage3_small_cohort.py  stage4_position_monitor.py  stage5_full_leaderboard.py  stage6_scheduler_cycle.py  start-public.sh  test_content_angles.py  test_score_one.py  train_model.py  train_model_v2.py  train_model_v3.py
specs/: consensus-confluence-trading-parallelized.md  consensus-confluence-trading.md  entry-only-signal-generator-parallelized.md  entry-only-signal-generator.md  leverage-aware-scaling-risk-module-parallelized.md  leverage-aware-scaling-risk-module.md  pnl-weighted-dynamic-allocation-parallelized.md  pnl-weighted-dynamic-allocation.md  position-snapshot-rebalancing-parallelized.md  position-snapshot-rebalancing.md  terminal-tui-app-parallelized.md  terminal-tui-app.md  ui-dashboard-implementation-parallelized.md  (+1 more)
(+286 files in other folders)
