[project]
name = "snap"
version = "0.1.0"
description = "Hyperliquid copytrading system - position snapshot rebalancing"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "textual>=0.85",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
]

[project.scripts]
snap = "snap.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
